fix(ui): improve navbar and page spacing

--- a/essentials_of_microeconomics/www/main.css
+++ b/essentials_of_microeconomics/www/main.css
@@ -1,5 +1,10 @@
-body {
+@media screen and (max-width: 728px) {
+    body {
+        padding-right: 0 !important
+    }
+}
+
+.tab-pane {
     max-width: 728px;
-    margin: auto;
-    padding-top: 40px;
+    margin: 0 auto;
 }
